# llami

./: CHANGELOG.md  README.md  llami-banner.txt  llami.cabal  ollamaphon.cabal
.github/workflows/: llami_release.yml
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
